<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.joaoflaviofreitas.inchurch.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_details"
            app:destination="@id/navigation_details" />

    </fragment>

    <fragment
        android:id="@+id/navigation_details"
        android:name="com.joaoflaviofreitas.inchurch.ui.details.DetailsFragment"
        android:label="@string/title_details"
        tools:layout="@layout/fragment_details" >
        <argument
            android:name="movie_id"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.joaoflaviofreitas.inchurch.ui.notifications.FavoritesFragment"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_favorites" >
        <action
            android:id="@+id/action_navigation_favorites_to_navigation_details"
            app:destination="@id/navigation_details" />
    </fragment>
</navigation>