<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:id="@+id/card_of_search"
            android:layout_height="wrap_content"
            app:cardCornerRadius="13dp"
            app:cardElevation="8dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="@dimen/margin_init">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/search_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:queryHint="@string/search"
                app:iconifiedByDefault="false"
                app:queryBackground="@android:color/transparent" />

        </com.google.android.material.card.MaterialCardView>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/swipe_refresh"
        >
    <ScrollView
        android:nestedScrollingEnabled="true"
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginHorizontal="@dimen/margin_init"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                android:id="@+id/rv_search_movie"
                android:visibility="gone" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/load_bar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:indeterminate="true"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/trending_movies_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                android:text="@string/trending_movies"
                android:textColor="@color/colorOnPrimary"
                android:textSize="20sp"
                android:visibility="invisible"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/margin_init"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_trending_movies"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:layout_marginHorizontal="@dimen/margin_init"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/trending_movies_title"
                tools:listitem="@layout/movie_item" />

            <TextView
                android:id="@+id/popular_movies_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                android:text="@string/popular_movies"
                android:textColor="@color/colorOnPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="@id/trending_movies_title"
                app:layout_constraintTop_toBottomOf="@id/rv_trending_movies" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_popular_movies"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:layout_marginHorizontal="@dimen/margin_init"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/popular_movies_title"
                tools:listitem="@layout/movie_item" />

            <TextView
                android:id="@+id/upcoming_movies_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                android:text="@string/upcoming_movies"
                android:textColor="@color/colorOnPrimary"
                android:textSize="20sp"
                android:visibility="invisible"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/trending_movies_title"
                app:layout_constraintTop_toBottomOf="@id/rv_popular_movies" />

            <TextView
                android:id="@+id/not_found_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_not_found"
                android:textColor="@color/colorOnPrimary"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_upcoming_movies"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:layout_marginHorizontal="@dimen/margin_init"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="13dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/upcoming_movies_title"
                tools:listitem="@layout/movie_item" />

            <TextView
                android:visibility="gone"
                android:id="@+id/error_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/network_error"
                android:textColor="@color/colorOnPrimary" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</LinearLayout>